#5 refactor: rename variables and method to make it clear